# internet-download-manager

./: .gitignore  CHANGELOG.md  CHUNK_DOWNLOADING_GUIDE.md  CONTRIBUTING.md  DELIVERY_SUMMARY.txt  FEATURE_SHOWCASE.md  FILE_INFO_DIALOG_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  START_HERE.txt  UI_BEFORE_AFTER.md  UI_MODERNIZATION_GUIDE.md  UI_UPDATE_SUMMARY.txt  UI_VISUAL_PREVIEW.md  VERIFICATION_CHECKLIST.md  bootstrap.py  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
core/: __init__.py  assembler.py  downloader.py  ftp.py  hls_worker.py  network.py  storage.py  torrent.py
desktop/: api.py  config.py  credentials.py  downloader.py  main.py  mime_types.py  storage.py  websocket.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SECURITY.md
extension/: EXTENSION_ANALYSIS.md  README.md  background.js  content.js  download-scorer.js  download_scorer.js  manifest.json  options.html  options.js  popup.html  popup.js  rule_engine.js
extension/background/: service_worker.js
extension/content/: capture_clicks.js  injected_network_hooks.js
extension/icons/: .gitkeep
extension/options/: options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
scripts/: build_linux.sh  build_windows.ps1  run_full_test_project.ps1  run_packaged_smoke.ps1  run_tests.ps1
server/: __init__.py  api.py  websocket.py
test-reports/: junit.xml
tests/: FULL_TEST_PROJECT.md  __init__.py  conftest.py  test_assembler.py  test_concurrency_stress.py  test_core_advanced.py  test_downloader.py  test_extension_edge_cases.py  test_file_info_dialog.py  test_main.py  test_network.py  test_phase4_robustness.py  test_resolve_flow.py  test_server.py  test_storage.py  test_torrent.py  test_ui.py  test_ui_advanced.py  test_ui_components.py  test_utils.py
ui/: __init__.py  add_dialog.py  file_info_dialog.py  main_window.py  settings_dialog.py  speed_graph.py  theme.py  tray.py
utils/: __init__.py  categoriser.py  clipboard_monitor.py  credentials.py  media_extractor.py  scheduler.py  speed_tuning.py
