[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idm"
version = "1.0.0"
description = "Internet Download Manager — professional multi-threaded download accelerator with browser integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "IDM Team"},
]
keywords = ["download", "manager", "accelerator", "browser-extension", "torrent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
]
dependencies = [
    "PyQt6>=6.6.0",
    "pyqtgraph>=0.13.3",
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.4",
    "aiofiles>=23.2.1",
    "aioftp>=0.22.3",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "yt-dlp>=2024.1.0",
    "aiosqlite>=0.19.0",
    "psutil>=5.9.0",
    "certifi>=2023.11.0",
    "cryptography>=41.0.0",
    "keyring>=25.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/idm"
Repository = "https://github.com/your-org/idm"
Issues = "https://github.com/your-org/idm/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
build = [
    "pyinstaller>=6.10.0",
]

[project.scripts]
idm = "main:main"

[project.gui-scripts]
idm-gui = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "server*", "ui*", "utils*"]
exclude = ["tests*", "extension*"]

# --- Tool Configuration ---

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "network: marks tests that require network access",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # type-checking imports
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["core", "ui", "server", "utils"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
